# MEV-Shield

./: .dockerignore  .env.template  .gitignore  .lighthouserc.json  BUILD_AND_RUN.md  CHANGELOG.md  COMPARISON_MEVSHIELD_VS_MERKLE.md  COMPETITORS_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.full  Cargo.toml.simple  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.secure  ENGAGEMENT_STRATEGY.md  GIT_COMMIT_LOG.md  GIT_PUSH_INSTRUCTIONS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  JIRA_INTEGRATION_GUIDE.md  JIRA_SETUP_COMPLETE.md  LOCAL_DEPLOYMENT.md  Makefile  NEURAL_IMPLEMENTATION.md  PHASE2_SECURITY_IMPLEMENTATION.md  QUICK_START_ACTION_PLAN.md  README.md  REAL_DATA_INTEGRATION_GUIDE.md  SECURITY_ASSESSMENT.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_REMEDIATION_PLAN.md  SECURITY_TICKETS.md  auth-github.sh  build-and-deploy-local.sh  build_production.sh  claude.md  commit.sh  (+35 more)
.github/: CONFIGURATION.md  JIRA_SETUP.md  SECURITY_SETUP.md  setup-secrets.md
PROJECT/: 01_PROJECT_OVERVIEW.md  02_TECHNICAL_ARCHITECTURE.md  03_BUSINESS_PLAN.md  04_QUICK_START_ACTION_PLAN.md  05_PITCH_DECK.md  06_LINKEDIN_OUTREACH.md  07_TARGET_COMPANIES_DATABASE.md  08_CASE_STUDIES.md  09_INTEGRATION_GUIDE.md  10_METRICS_DASHBOARD.md  README.md
backend-live/: Dockerfile
backend-mock/: Dockerfile  package-lock.json  package.json  server-real.js  server.js
contracts/: MEVShieldProtection.sol  UniswapV3Integration.sol
dashboard/: Dockerfile.admin  Dockerfile.production  README.md  nginx.conf  package-lock.json  package.json  tsconfig.json
docs/: JIRA-GITHUB-SYNC.md  MEV_SHIELD_EPICS.md  MEV_SHIELD_PRD.md  MEV_SHIELD_SPRINT_PLAN.md  ROADMAP.md  SPRINT_BREAKDOWN.md  competitive-analysis.md
mev-shield-production/: README.md  deploy.sh  docker-compose.yml  nginx.conf
migrations/: 001_initial_schema.sql
monitoring/: prometheus.yml
nginx/: default-ssl.conf  default.conf  nginx.conf  nginx.secure.conf
scripts/: create-epics-jira.js  create-jira-tickets.js  create-simple-epics.js  create-sprint-tickets.js  export-tickets-github.sh  export-tickets-jira.sh  jira-github-sync.sh  (+5 more)
(+121 files in other folders)
